<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_computadora_portatil"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_progreso"
        android:icon="@drawable/ic_comprobacion_de_lista"
        android:title="@string/progreso" />

    <item
        android:id="@+id/navigation_estadisticas"
        android:icon="@drawable/ic_estadisticas"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_usuario"
        android:title="@string/title_perfil" />

</menu>